--- a/calendar.html
+++ b/calendar.html
@@ -1,4 +1,102 @@
 ﻿<html>
+<body>
+	<style type="text/css">
+		#calendar span { 
+			float: left;
+			border: 1px solid #ccc;
+			width: 30px;
+			height: 25px;
+			text-align: right;
+			font-family: cursive;
+		}
+		#calendar span:nth-child(7n+1) {
+			clear: left;
+		}
+	</style>
+
+	<div id="calendar"></div>
+
+	<script type="text/javascript">
+		var Calendar = (function(){
+			var dates,
+				leap_year = false,
+				check_week = [5,1,1,4,6,2,4,0,3,5,1,3],
+				week = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'],
+				month = ['JANUARY','FEBRUARY','MARCH', 'APRIL', 'MAY', 'JUNE', 'JULY', 'AUGUST', 'SEPTEMBER', 'OCTOBER', 'NOVEMBER', 'DECEMBER'],
+				Calendar = function (year, month, date) {
+					this.year = year
+					this.month = month
+					this.date = date
+				}
+
+
+				Calendar.prototype.show_dates = function () {
+					console.log(this)
+					/************************************/
+					/** 判斷是否為潤年               ****/
+					/************************************/
+					leap_year = (!(this.year%400) || ((this.year%400) && (this.year%100) && !(this.year%4)))
+
+
+					/***********************************/
+					/** 閏月算法 400一年閏、4年一閏 ****/
+					/***********************************/
+					if (this.month == 1) {
+						dates = (leap_year) ? 29 : 28
+					} else if (tihs.month < 7){
+						dates = (!(this.month%2)) ? 31 : 30
+					} else {
+						dates = (this.month%2) ? 31 : 30
+					}
+
+
+					/***************************************************************/
+					/** 星期的算法：                                            ****/
+					/** Ｙ(year)：年份減2000                                    ****/
+					/** Ｌ(leap days)：從2000年1月1日到該日之間的閏日數目       ****/
+					/** Ｍ(month)：月份的代號，從一月到十二月分別是511462403513 ****/
+					/** Ｄ(day)：日號                                           ****/
+					/** Ｙ＋Ｌ＋Ｍ＋Ｄ（除7的餘數）                             ****/
+					/***************************************************************/
+					// 400 年 98個閏年 + %400 剩下的天數/4 無條件進位 - %100年不算閏
+					var count_leap_year = (Math.floor((this.year/400))*98+Math.floor(Math.ceil(this.year%400)/4)) - Math.floor((this.year%400)/100) + 1,
+						which_week = ((this.year - 2000) + count_leap_year + check_week[this.month] + 1 )%7,
+						print_cal = '<div>'+ month[this.month] +'</div>'
+						
+						for (var i=0; i < 7; i++) {
+							print_cal += '<span>' + week[i] + '</span>'
+						}
+						if (which_week) {
+							for (var i=0; i<which_week; i++) {
+								print_cal += '<span> </span>'
+							}
+						}
+						for (var i=0; i < dates; i++) {
+							print_cal += '<span>' + (i+1) + '</span>'
+						}
+
+						document.getElementById('calendar').innerHTML = print_cal
+
+				}
+
+
+
+
+
+				return Calendar
+
+		})()
+		var calendar = new Calendar(2014, 1, 9);
+		calendar.show_dates()
+
+	</script>
+</body>
+</html>
+
+
+
+<!--
+<html>
 <head>
 
 <style type="text/css">
@@ -225,3 +323,5 @@ function ch_m(touch){
 
 </body>
 </html>
+
+-->
