--- a/slider.html
+++ b/slider.html
@@ -7,6 +7,7 @@
     }
     .swipe-img {
         width: 500px;
+        height: 300px;
         list-style: none;
         white-space: nowrap;
         overflow: hidden;
@@ -16,9 +17,12 @@
     .swipe-img li {
         display: inline-block;
         margin-left: -5px;
+        height: 100%;
+        width: 102%;
     }
     .swipe-img img {
         width: 100%;
+        height: 100%;
         position: relative;
     }
     .swipe-btn {
@@ -44,7 +48,6 @@
 <script type="text/javascript">
 
     $(function(){
-
         var Slider = (function () {
             var swipe_animate = function (This) {
                     This.move = 502*This.index
@@ -109,7 +112,7 @@
                 }
                 return Slider
         })()
-        var Slider = new Slider('test1')
+        var Slider1 = new Slider('test1')
         var Slider2 = new Slider('test2')
     })
 
@@ -118,19 +121,18 @@
 <body>
 
     <div id="test1" class="swipe-wrap">
-        <ul class="swipe-img">
-            <li><img src="./public/images/1.jpg"></li>
-            <li><img src="./public/images/2.jpg"></li>
-            <li><img src="./public/images/3.jpg"></li>
-        </ul>
+        <ul class="swipe-img"
+            ><li><img src="./public/images/1.jpg"></li
+            ><li><img src="./public/images/2.jpg"></li
+            ><li><img src="./public/images/3.jpg"></li></ul>
     </div>
-
+    <hr>
     <div id="test2" class="swipe-wrap">
-        <ul class="swipe-img">
-            <li><img src="./public/images/4.jpg"></li>
-            <li><img src="./public/images/5.jpg"></li>
-            <li><img src="./public/images/6.jpg"></li>
-        </ul>
+        <ul class="swipe-img"
+            ><li><img src="./public/images/4.jpg"></li
+            ><li><img src="./public/images/5.jpg"></li
+            ><li><img src="./public/images/2.jpg"></li
+            ><li><img src="./public/images/1.jpg"></li></ul>
     </div>
 </body>
 </html>
